--- a/isMobil.html
+++ b/isMobil.html
@@ -32,13 +32,15 @@
 
     </div>
     <script>
+
         function checkPhone(){ 
-            var phone = $(".phone").val();
+            var phone = document.getElementById('mobil').value;
             if(!(/^1[3456789]\d{9}$/.test(phone))){ 
-                alert("手机号码不合法，请重新输入");  
+                alert("手机号码有误，请重填");  
                 return false; 
             } 
         }
+
     </script>
 
 </body>
